# software-based-PUF

./: .gitignore  DEVELOPMENT_WIP_INCOMPLETE_README.md  README.md
Source Code/: DEVELOPMENT_BRANCH_README.md  README.md
Source Code/code-coverage/PUF_code_coverage/: CMakeLists.txt  main.cpp
Source Code/code-coverage/PUF_code_coverage/src/: PUF.h
Source Code/code-coverage/PUF_code_coverage/src/Crypto/: AES256.cpp  AESCommon.cpp  CTR.cpp  KeccakCore.cpp  SHA3.cpp
Source Code/code-coverage/PUF_code_coverage/src/bch/: BCH.cpp  BCH.h
Source Code/code-coverage/PUF_code_coverage/src/tools/: Tools.cpp  Tools.h
Source Code/code-coverage/PUF_code_coverage/test/: BCHCompleteTest.cpp  BCHTest.cpp  PUF_Test.cpp  ToolsTest.cpp
Source Code/puf_xtra/: bindings.csv  bindutils.py  conf.py  port_detect.py  portutils.py  puf_consts.py  seed_arduino.py  user.py  wrapper.py
Source Code/reconstruction/: .travis.yml
Source Code/schematic/: 23LC1024-time-interval.fzz  23LC1024-voltage.fzz  CY62256NLL-enrollment-microSD-incorrect_bb.png.old  CY62256NLL-enrollment-microSD.fzz  CY62256NLL-time-interval.fzz  CY62256NLL-voltage.fzz
Thesis Report/: Makefile  README  README.md  latex8.bst  thesis.bbl  thesis.tex  thesis.toc
Thesis Report/bib/: all.bib  article.bib  book.bib  inbook.bib  inproceedings.bib  misc.bib  mscthesis.bib
Thesis Report/chapter/: conclusion.tex  experiment.tex  introduction.tex  problems.tex  proposed.tex  related.tex  related_work.tex  security.tex  sram_puf.tex
Thesis Report/images/: 23lc1024.eps  23lc1024_hd_intra_voltage_stable_neighbor.eps  23lc1024_hd_intra_voltage_stable_remanence.eps  A_decrypt_correct.eps  A_decrypt_wrong_SRAM_D.eps  A_decrypt_wrong_password.eps  A_encrypt.eps  B_decrypt_correct.eps  B_decrypt_wrong_SRAM_A.eps  B_decrypt_wrong_password.eps  B_encrypt.eps  CY62256-new-SD_bb.eps  C_decrypt_correct.eps  C_decrypt_wrong_SRAM_D.eps  C_decrypt_wrong_password.eps  C_encrypt.eps  D_decrypt_correct.eps  D_decrypt_wrong_SRAM_B.eps  D_decrypt_wrong_password.eps  D_encrypt.eps  E_decrypt_wrong_SRAM_C.eps  E_decrypt_wrong_SRAM_D.eps  KEY  authentication.eps  automated.eps  code_coverage.eps  crypt_key_generation_old.eps  cy62256nll.eps  cy62256nll_hd_intra_voltage_stable_neighbor.eps  cy62256nll_hd_intra_voltage_stable_remanence.eps  enrollment.eps  fuzzy_commitment.eps  key-storage-scheme.eps  (+8 more)
(+5849 files in other folders)
